--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,22 +1,22 @@
 <header class="header">
   <div class="header__container container">
-      <a href="#" class="header__logo">
+      <a href="./#hero" class="header__logo">
           <span class="header__logo-icon">⟡</span> Radix-Fusion
       </a>
 
       <nav class="header__nav">
           <ul class="header__menu">
-              <li class="header__item"><a href="#hero" class="header__link">Главная</a></li>
-              <li class="header__item"><a href="#about" class="header__link">О платформе</a></li>
-              <li class="header__item"><a href="#innovations" class="header__link">Инновации</a></li>
-              <li class="header__item"><a href="#education" class="header__link">Обучение</a></li>
-              <li class="header__item"><a href="#benefits" class="header__link">Преимущества</a></li>
-              <li class="header__item"><a href="#faq" class="header__link">FAQ</a></li>
+              <li class="header__item"><a href="./#hero" class="header__link">Главная</a></li>
+              <li class="header__item"><a href="./#about" class="header__link">О платформе</a></li>
+              <li class="header__item"><a href="./#innovations" class="header__link">Инновации</a></li>
+              <li class="header__item"><a href="./#education" class="header__link">Обучение</a></li>
+              <li class="header__item"><a href="./#benefits" class="header__link">Преимущества</a></li>
+              <li class="header__item"><a href="./#faq" class="header__link">FAQ</a></li>
           </ul>
       </nav>
 
       <div class="header__actions">
-          <a href="#contact" class="btn btn--small header__btn">Начать</a>
+          <a href="./#contact" class="btn btn--small header__btn">Начать</a>
           <button class="header__burger" aria-label="Открыть меню">
               <i data-lucide="menu"></i>
           </button>
