--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
       <div class="footer__grid">
 
           <div class="footer__col footer__col--brand">
-              <a href="#" class="footer__logo">Radix-Fusion</a>
+              <a href="./#hero" class="footer__logo">Radix-Fusion</a>
               <p class="footer__desc">
                   Передовая цифровая инфраструктура для тех, кто хочет понять технологии. Решения, которые меняют правила игры.
               </p>
@@ -15,22 +15,22 @@
           <div class="footer__col footer__col--nav">
               <h3 class="footer__title">Меню</h3>
               <ul class="footer__menu">
-                  <li><a href="#about" class="footer__link">О платформе</a></li>
-                  <li><a href="#innovations" class="footer__link">Инновации</a></li>
-                  <li><a href="#education" class="footer__link">Обучение</a></li>
-                  <li><a href="#blog" class="footer__link">Блог</a></li>
+                  <li><a href="./#about" class="footer__link">О платформе</a></li>
+                  <li><a href="./#innovations" class="footer__link">Инновации</a></li>
+                  <li><a href="./#education" class="footer__link">Обучение</a></li>
+                  <li><a href="./#faq" class="footer__link">FAQ</a></li>
               </ul>
           </div>
 
           <div class="footer__col footer__col--legal">
               <h3 class="footer__title">Информация</h3>
               <ul class="footer__links">
-                  <li><a href="privacy.html" class="footer__link">Политика конфиденциальности</a></li>
-                  <li><a href="cookies.html" class="footer__link">Cookies Policy</a></li>
-                  <li><a href="terms.html" class="footer__link">Условия использования</a></li>
-                  <li><a href="return.html" class="footer__link">Политика возврата</a></li>
-                  <li><a href="disclaimer.html" class="footer__link">Отказ от ответственности</a></li>
-                  <li><a href="personal-data-policy.html" class="footer__link">Обработка данных</a></li>
+                  <li><a href="./privacy.html" class="footer__link">Политика конфиденциальности</a></li>
+                  <li><a href="./cookies.html" class="footer__link">Cookies политика</a></li>
+                  <li><a href="./terms.html" class="footer__link">Условия использования</a></li>
+                  <li><a href="./return.html" class="footer__link">Политика возврата</a></li>
+                  <li><a href="./disclaimer.html" class="footer__link">Отказ от ответственности</a></li>
+                  <li><a href="./personal-data-policy.html" class="footer__link">Обработка данных</a></li>
               </ul>
 
               <div class="footer__contacts">
